fixed image overlapping

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ a.nav-link:hover {
 
 /* header styles */
 .header {
-  margin-bottom: 70px;  
+  margin-bottom: 100px;  
 }
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
@@ -57,6 +57,13 @@ a.nav-link:hover {
 }
 
 /* page styles */
+.jumbotron {
+  background-color: white;
+  width:fit-content;
+  position: relative;
+  align-items: center;
+  padding-left: 40%;
+}
 
 .navbar-brand {
   margin-bottom: 10px;
@@ -70,6 +77,7 @@ a.nav-link:hover {
   height: 10rem;
   padding-bottom: 90%;
 }
+
 
 #name-div{
   font-family: 'Cormorant Garamond', serif;
@@ -86,7 +94,7 @@ a.nav-link:hover {
 .welcome-font {
   font-family: 'Cormorant Garamond', serif;
   font-size: 30px;
-  position: absolute;
+  position: relative;
   font-style: italic;
 }
 
@@ -101,16 +109,25 @@ a.nav-link:hover {
 
 #portrait-div{
   width:100vw;
-  height:85vh;
+  height:850px;
   margin:0;
   padding:0;  
 }
 
+#suzy {
+ max-width:100%;
+ height:auto;
+ max-height:100%;
+ border: solid 2px black; 
+ width: 50%;
+}
+
 .aboutme {
-  font-family:  'Montserrat', sans-serif;
+  font-family:'Montserrat', sans-serif;
   font-size: 2.7vw;
   text-align: center;
 }
+
 
 .contact {
   padding-left: 100%;
@@ -143,6 +160,7 @@ a.nav-link:hover {
   text-align: left;
 }
 
+
 .work {
   font-size: 2.7vw;
   font-family:  'Montserrat', sans-serif;
@@ -155,6 +173,10 @@ a.nav-link:hover {
 
 .about {
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  margin-bottom:100px; 
+ 
+
 }
 
 .navbar {
@@ -191,6 +213,15 @@ a.nav-link:hover {
   object-fit: cover;
   width: 75%;
   padding-left: 20%;
+  position:relative;
+}
+
+    
+#me2 {
+  object-fit: cover;
+  width: 75%;
+  padding-left: 20%;
+  position:relative;
 }
 
 #copyright {
@@ -235,87 +266,12 @@ li:hover::after {
 }
 
 #about {
-  position: relative;
+  position: sticky;
   text-align: left;
   font-family: 'Montserrat', sans-serif;
 }
 
-body {
-  padding: 0;
 
-  margin: 0;
-  font-family: 'Nanum Myeongjo', serif;
-}
-
-
-  h1 {
-    padding: 9px;
-    margin: 0;
-    font-size: 30px;
-    font-family:'Cormorant Garamond', serif;
-    color: black;
-    text-align: left;
-  }
-
-  footer {
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    clear: both;
-    background-color: white;
-    color: black;
-    position: relative;
-  }
-  footer span {
-    display: table-cell;
-    vertical-align: middle;
-    height: 50px;
-    float: left;
-  }
-  .footerwidth {
-    font-family: 'Hind Guntur', sans-serif;
-    font-size: 15px;
-    width: 90%;
-    margin: 0 auto;
-  }
-  .icons {
-    float: right;
-    width: 70px;
-    font-size: 20px;
-  }
- 
-  h2 {
-    padding: 9px;
-
-    margin: 0;
-    font-size: 50px;
-  
-    font-family:'Cormorant Garamond', serif;
-    color: black;
-    text-align: center;
-    font-style: italic;
- }
-
- h5 {
-  font-family: 'Hind Madurai', sans-serif;
-  font-size: 30px;
-  color: black;
-  text-align: center;
- }
-
-  .about-body {
-    font-family: 'Courgette', cursive;
-    font-size: 16px;
-    text-align: justify;
-  }
-
-
-  body {
-    background-color: #f1f1f1;
-    padding: 20px;
-    font-family: Arial;
-  }
-  
   /*Portfolio*/
 
  .card-header {
@@ -405,6 +361,33 @@ body {
     background-color: white;
     padding: 10px;
   }
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
+ @include media-breakpoint-between(xs,sm){
+  .btn {
+      @include button-size($input-btn-padding-y-sm, $input-btn-padding-x-sm, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
+  }
+}
   
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 900px) {
